iOS fixes (hopefully) and assorted bug squashing

--- a/app/css/splash.css
+++ b/app/css/splash.css
@@ -41,8 +41,8 @@
   right: 0;
   bottom: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
 }
 #backdrop canvas {
   position: absolute;
